239 implement delta times compared to your best for each checkpoint (#242)
* Added checkpoint splits

* Spread out leaderboard updates over many ticks (#241)

* implemented delta times and better filter